--- a/src/css/head.css
+++ b/src/css/head.css
@@ -1,9 +1,29 @@
-.head-title{
+.head {
     display: flex;
-    align-items:center;
+    align-items: center;
+    justify-content:  space-between;
+    margin: 0 20px;
 }
 
-img.head-icon{
-    width: 50px;
-    height: 50px;
+.head Button {
+    height: 60px;
+    width: 200px;
+    background-color: #121810;
+    color: #FFF;
+    font-size: 0.9em;
 }
+.head-container, .head-name, .head-icon{
+    display: flex;
+    align-items: center;
+
+    padding: 0 5px ;
+    margin: 10px 0;
+
+    text-transform: uppercase;
+    font-size: 25px;
+    font-weight: 600;
+}
+.head-container{
+    justify-content: space-between;
+}
+
