--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-container {
+  display:flex;
+  width: 100vw;
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+aside {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex:1;
+  min-width: 250px;
+  border:2px solid red;
 }
 
-.App-link {
-  color: #61dafb;
+.user-info {
+  display: flex;
+  flex: 1;
+  border: 2px solid blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+menu {
+  display: flex;
+  border: 2px solid green;
+  flex: 5;
+}
+
+.percent {
+  display: flex;
+  flex: 1;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid lightgray;
+  flex: 4
+}
+
+header {
+  display: flex;
+  flex:1;
+  border: 2px solid lightgray;
+}
+
+.content {
+  display: flex;
+  flex: 5;
+  flex-direction: row;
+  border: 2px solid lightgray;
+}
+
+.user-menu {
+  display: flex;
+  flex: 1;
+  border: 2px solid lightblue;
+}
+
+.project-activity {
+  display: flex;
+  flex: 2;
+  border: 2px solid red;
+}
+
+footer {
+  flex:1;
+  border: 2px solid black;
 }
