--- a/src/css/projectActivity.css
+++ b/src/css/projectActivity.css
@@ -1,5 +1,6 @@
 .projectActivity_container {
     display: flex;
+    flex:1;
     flex-direction: column;
     padding: 50px 15px;
 }
@@ -8,6 +9,8 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    max-height: 230px;
+    overflow-y: auto;
 }
 
 .project-head {
